--- a/boss_services/boss_adapter_services/pom.xml
+++ b/boss_services/boss_adapter_services/pom.xml
@@ -22,6 +22,13 @@
 	</properties>
 	
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3</version>
+		</dependency>
+		
   		<!-- Jasypt -->
 		<dependency>
 			<groupId>org.jasypt</groupId>
